--- a/less/components/20-about.less
+++ b/less/components/20-about.less
@@ -1,5 +1,5 @@
 .section-1 {
-  background-image:url('../img/parallax4.jpg');
+  background-image: url('../img/parallax4.jpg');
   background-size: cover;
   text-align: center;
   color: #ffffff;
@@ -8,6 +8,11 @@
   #body {
     margin: 50px;
     text-align: left;
+  }
+
+  #line {
+    font-size: 40px;
+    color: #fb0404;
   }
 
   h1 {
@@ -21,15 +26,15 @@
   }
 
   p {
-    color:rgba(175, 175, 175, 0.6);
+    color: rgba(175, 175, 175, 0.6);
     font-size: 15px;
   }
 
-  #cta-1 {
+  .cta-1 {
     border-radius: 50px;
     background-color: #fb0404;
     padding: 25px;
-    margin: 100px;
+    margin: 100px 130px 100px 45px;
   }
 
   a {
@@ -37,9 +42,10 @@
     color: #ffffff;
   }
 
-  #cta-1:hover{
+  .cta-1:hover {
     background-color: #ffffff;
-    a{
+    transition: 0.3s ease-in-out;
+    a {
     color: #fb0404;
     }
   }
